# FavImage

./: .env.sample  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
api/: db.py  main.py  migrate_db.py  settings.py
api/cruds/: auth.py  fav.py  images.py
api/models/: model.py
api/routers/: auth.py  fav.py  images.py
api/schemas/: auth.py  fav.py  images.py
api/schemes/: auth.py  fav.py  images.py
frontend/: .eslintrc.json  package.json  tsconfig.json
frontend/src/: App.tsx
frontend/src/api/: auth.ts  fav.ts  image.ts  index.ts
frontend/src/components/: EmptyImagesDialog.tsx  ImageCard.tsx
frontend/src/interfaces/: api.ts
frontend/src/layouts/: Header.tsx  SideBar.tsx
frontend/src/pages/: FavoritedImages.tsx  Home.tsx  Landing.tsx  SignIn.tsx  SignUp.tsx
frontend/src/utils/: index.ts
